venue-web/templates/ingress/5.demo-1-serviice.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-v1
  labels:
    application: demo
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9090
      name: external
  selector:
    application: demo
    version: v1
