venue-web/templates/ingress/6.demo-service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-v2
  labels:
    application: demo
    version: v2
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9090
      name: external
  selector:
    application: demo
    version: v2
